brat/test/golden/imports/use-without-rename.brat.golden
Error in test/golden/imports/use-without-rename.brat on line 4:
main = lib.x
       ^^^^^

  lib.x not found in (value) environment

